--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -32,7 +32,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><%= image_tag 'thumbs/01.jpg' , alt: "" %></a>
+							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><%= image_tag 'thumbs/01.jpg' , alt: "" , width: "100px" %></a>
 							<h2>Diam tempus accumsan</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
