--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,5 @@
 
 <!DOCTYPE HTML>
-<!--
-	Lens by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Ruby-Lens</title>
@@ -17,137 +12,48 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 	<body class="is-preload-0 is-preload-1 is-preload-2">
-  <%= render 'shared/navbar' %>
+	<!-- Main -->
+	<div id="main">
+		<!-- Header -->
+		<header id="header">
+			<h1>Lens</h1>
+			<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>	
+        <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>	
+        <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>            
+			</ul>
+		</header>	
 
     <!-- yield -->
     <%= yield %>
 
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Header -->
-					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							
-              <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							
-              <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							
-              <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-            
-						</ul>
-					</header>
-
-				<!-- Thumbnail -->
-					<section id="thumbnails">
-						<article>
-							<a class="thumbnail" href="../assets/images/fulls/01.jpg" data-position="left center">
-              <%= image_tag 'fulls/01.jpg' , alt: "" %>
-              </a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg">
-              <%= image_tag 'fulls/02.jpg' , alt: "" %></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center">
-              <%= image_tag 'fulls/03.jpg' , alt: "" %></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg">
-              <%= image_tag 'fulls/04.jpg' , alt: "" %></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center">
-              <%= image_tag 'fulls/05.jpg' , alt: "" %></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg">
-              <%= image_tag 'fulls/06.jpg' , alt: "" %></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg">
-              <%= image_tag 'fulls/07.jpg' , alt: "" %></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg">
-              <%= image_tag 'fulls/08.jpg' , alt: "" %>
-              </a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg">
-              <%= image_tag 'fulls/09.jpg' , alt: "" %>
-              </a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg">
-              <%= image_tag 'fulls/10.jpg' , alt: "" %>
-              </a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg">
-              <%= image_tag 'fulls/11.jpg' , alt: "" %>
-              </a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg">
-              <%= image_tag 'fulls/12.jpg' , alt: "" %>
-              </a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
-						</article>
-					</section>
+<%# Scripts %>
+    <%= javascript_include_tag "application"%>
+    <%= javascript_include_tag "jquery.min.js"%>
+    <%= javascript_include_tag "browser.min.js"%>
+    <%= javascript_include_tag "breakpoints.min.js"%>
+    <%= javascript_include_tag "main.js"%>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+							<li>&copy; Untitled.</li>
+              <li>Design: <a href="http://html5up.net">HTML5 UP</a>
+              </li>
 						</ul>
 					</footer>
-
-
-
-		<!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <!-- Dependencias de Javascript -->
-    <%= javascript_importmap_tags 'jquery.min.js'%>
-    <%= javascript_importmap_tags 'browser.min.js'%>
-    <%= javascript_importmap_tags 'breakpoints.min.js'%>
-    <%= javascript_importmap_tags 'main.js'%>
     </div>
 	</body>
 </html>
